unpackaged/objects/Lead.object
<CustomObject>
  <businessProcesses>
    <fullName>DIH Std Lead Process</fullName>
    <description>Use this Lead Process when managing Leads.</description>
    <isActive>true</isActive>
    <values>
      <fullName>Assigned to Sales rep</fullName>
    </values>
    <values>
      <fullName>Disqualified</fullName>
    </values>
    <values>
      <fullName>Duplicate</fullName>
    </values>
    <values>
      <fullName>New</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Qualified</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>SimPlant Lead Process</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>Contact Made</fullName>
    </values>
    <values>
      <fullName>Disqualified</fullName>
    </values>
    <values>
      <fullName>New</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Qualified</fullName>
    </values>
  </businessProcesses>
  <businessProcesses>
    <fullName>WC2012 Process</fullName>
    <isActive>true</isActive>
    <values>
      <fullName>New</fullName>
      <default>true</default>
    </values>
    <values>
      <fullName>Qualified</fullName>
    </values>
  </businessProcesses>
  <fields>
    <fullName>AcademicTitle__c</fullName>
    <label>Academic Title</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Dr.</fullName>
        </value>
        <value>
          <fullName>Prof.</fullName>
        </value>
        <value>
          <fullName>Prof. Dr.</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>CampaignMemberStatus__c</fullName>
    <label>Campaign Member Status</label>
    <length>250</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Company_Type__c</fullName>
    <description>Type of Account (Dependent on Product Area)</description>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental Group Practice</fullName>
        </value>
        <value>
          <fullName>Dental Laboratory</fullName>
        </value>
        <value>
          <fullName>Dental Single Practice</fullName>
        </value>
        <value>
          <fullName>Dental Specialist Clinic</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Hospital</fullName>
        </value>
        <value>
          <fullName>University</fullName>
        </value>
        <value>
          <fullName>Distributor</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country_Code_3_digit__c</fullName>
    <description>TFUS-000002404 Used by Eloqua</description>
    <label>Country Code (3-digit)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_3_digit</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country_Lead__c</fullName>
    <label>Lead Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AM</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BR</fullName>
        </value>
        <value>
          <fullName>BY</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>CZ</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>EE</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>HR</fullName>
        </value>
        <value>
          <fullName>ID</fullName>
        </value>
        <value>
          <fullName>IL</fullName>
        </value>
        <value>
          <fullName>IR</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>KH</fullName>
        </value>
        <value>
          <fullName>KR</fullName>
        </value>
        <value>
          <fullName>KZ</fullName>
        </value>
        <value>
          <fullName>LB</fullName>
        </value>
        <value>
          <fullName>LU</fullName>
        </value>
        <value>
          <fullName>MK</fullName>
        </value>
        <value>
          <fullName>MY</fullName>
        </value>
        <value>
          <fullName>NL</fullName>
        </value>
        <value>
          <fullName>NO</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>DB_Created_Date_without_Time__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB Created Date without Time</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>DB_Lead_Age__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100,"All Lead Details Captured", "Missing: "&amp;IF( LEN( FirstName)=0,"First Name, ","")&amp;""&amp;IF(LEN(LastName)=0, "Last Name, ","")&amp;""&amp;IF( LEN(Company)=0, "Company, ","")&amp;""&amp;IF( LEN(Phone)=0, "Phone, ","")&amp;""&amp;IF( ISPICKVAL(Salutation,""), "Salutation, ","")&amp;""&amp;IF( ISPICKVAL(Rating,""), "Rating, ","")&amp;""&amp;IF( LEN(City)=0, "Complete Address, ","")&amp;""&amp;IF( LEN(Email)=0, "Email",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,""), 0,10) + IF( ISPICKVAL(Rating,""), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Department__c</fullName>
    <description>Department where leads works</description>
    <inlineHelpText>Enter Department where leads works</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Direct_Dial__c</fullName>
    <description>Phone number of lead</description>
    <label>Direct Dial</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>District__c</fullName>
    <description>Dependent on Territory - 200 in the UK, Non in NA</description>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Country_Lead__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>ABERYSTWYTH</fullName>
        </value>
        <value>
          <fullName>ASHFORD</fullName>
        </value>
        <value>
          <fullName>AYLESBURY</fullName>
        </value>
        <value>
          <fullName>AYR</fullName>
        </value>
        <value>
          <fullName>BALLYMENA</fullName>
        </value>
        <value>
          <fullName>BARNSLEY</fullName>
        </value>
        <value>
          <fullName>BARNSTAPLE</fullName>
        </value>
        <value>
          <fullName>BARROW</fullName>
        </value>
        <value>
          <fullName>BASINGSTOKE</fullName>
        </value>
        <value>
          <fullName>BATH</fullName>
        </value>
        <value>
          <fullName>BEDFORD</fullName>
        </value>
        <value>
          <fullName>BIRMINGHAM</fullName>
        </value>
        <value>
          <fullName>BLACKBURN</fullName>
        </value>
        <value>
          <fullName>BLACKPOOL</fullName>
        </value>
        <value>
          <fullName>BOLTON</fullName>
        </value>
        <value>
          <fullName>BORDERS</fullName>
        </value>
        <value>
          <fullName>BRADFORD</fullName>
        </value>
        <value>
          <fullName>BRIDGEND</fullName>
        </value>
        <value>
          <fullName>BRIGHTON</fullName>
        </value>
        <value>
          <fullName>BRISTOL FRENCHAY</fullName>
        </value>
        <value>
          <fullName>BRISTOL SOUTHMEAD</fullName>
        </value>
        <value>
          <fullName>BRISTOL UBHT</fullName>
        </value>
        <value>
          <fullName>BROMLEY</fullName>
        </value>
        <value>
          <fullName>BUPA STORES</fullName>
        </value>
        <value>
          <fullName>BURNLEY</fullName>
        </value>
        <value>
          <fullName>BURY</fullName>
        </value>
        <value>
          <fullName>BURY ST EDMUNDS</fullName>
        </value>
        <value>
          <fullName>CAERPHILLY</fullName>
        </value>
        <value>
          <fullName>CAMBRIDGE</fullName>
        </value>
        <value>
          <fullName>CANTERBURY</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Exhibition_CH__c</fullName>
    <label>Exhibition (CH)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Experience_from_these_implant_systems__c</fullName>
    <label>Implant system experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Astra Tech</fullName>
        </value>
        <value>
          <fullName>Biomet 3i</fullName>
        </value>
        <value>
          <fullName>Dentsply Friadent</fullName>
        </value>
        <value>
          <fullName>Nobel Biocare</fullName>
        </value>
        <value>
          <fullName>Straumann</fullName>
        </value>
        <value>
          <fullName>Zimmer</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Field_of_profession__c</fullName>
    <label>Field of profession</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>General Practitioner</fullName>
        </value>
        <value>
          <fullName>Surgeon</fullName>
        </value>
        <value>
          <fullName>Prosthodontist</fullName>
        </value>
        <value>
          <fullName>Periodontist</fullName>
        </value>
        <value>
          <fullName>Lab Technician</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>HowCollected__c</fullName>
    <defaultValue>If($User.FirstName = 'Eloqua' &amp;&amp; $User.LastName = 'Integration','Digitally',null)</defaultValue>
    <label>How collected?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Verbally Phone</fullName>
        </value>
        <value>
          <fullName>Verbally Face-To-Face</fullName>
        </value>
        <value>
          <fullName>Digitally</fullName>
        </value>
        <value>
          <fullName>Hard Copy Signed Form</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>I_m_working_with_the_following_imp_syst__c</fullName>
    <label>I'm working with the following imp.syst:</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>I_perform_the_prosthetic_procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I perform the prosthetic procedure</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>I_perform_the_surgical_procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I perform the surgical procedure</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>I_will_perform_the_prosthetic_procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I will perform the prosthetic procedure</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>I_will_perform_the_surgical_procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I will perform the surgical procedure</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Implant_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implant User?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Info_about_Atlantis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info about Atlantis</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Info_about_Cresco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info about Cresco</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Info_about_Scientific_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info about Scientific Documentation</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Info_about_Training_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info about Training &amp; Education</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Information_gathered_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Information gathered by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Insert_Email_Marketing_Consent_Collected__c</fullName>
    <defaultValue>If($User.FirstName = 'Eloqua' &amp;&amp; $User.LastName = 'Integration','Yes',null)</defaultValue>
    <label>Insert Email Marketing Consent Collected</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Interested_In__c</fullName>
    <label>Send me documentations about</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Scientific Documentation</fullName>
        </value>
        <value>
          <fullName>DENSTPLY Implants Magazine</fullName>
        </value>
        <value>
          <fullName>e-Newsletter</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Language__c</fullName>
    <label>Language (SP)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Afrikaans</fullName>
        </value>
        <value>
          <fullName>Arabic</fullName>
        </value>
        <value>
          <fullName>Danish</fullName>
        </value>
        <value>
          <fullName>Deutsch</fullName>
        </value>
        <value>
          <fullName>Dutch</fullName>
        </value>
        <value>
          <fullName>English</fullName>
        </value>
        <value>
          <fullName>Español</fullName>
        </value>
        <value>
          <fullName>Français</fullName>
        </value>
        <value>
          <fullName>French</fullName>
        </value>
        <value>
          <fullName>Hebrew</fullName>
        </value>
        <value>
          <fullName>Italiano</fullName>
        </value>
        <value>
          <fullName>Japanese</fullName>
        </value>
        <value>
          <fullName>Nederlands</fullName>
        </value>
        <value>
          <fullName>Polish</fullName>
        </value>
        <value>
          <fullName>Portuguese</fullName>
        </value>
        <value>
          <fullName>Russian</fullName>
        </value>
        <value>
          <fullName>Swedish</fullName>
        </value>
        <value>
          <fullName>日本語</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Lead_ID_DE__c</fullName>
    <description>Pulls the Lead ID and uses this field to transfer the ID to the Account</description>
    <inlineHelpText>Pulls the Lead ID and uses this field to transfer the ID to the Account</inlineHelpText>
    <label>Lead ID (DE) for transfer</label>
    <length>32</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Lead_Source_Other__c</fullName>
    <label>Lead Source (Other)</label>
    <length>175</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Lead_Source_Serial__c</fullName>
    <description>Identifies where the Lead has come from - Congress Name, External List Id etc</description>
    <label>Lead Source Name #</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>NA</fullName>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>MarketingChannel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>BA</fullName>
          <label>Baidu Ad</label>
        </value>
        <value>
          <fullName>BI</fullName>
          <label>Bing Ad</label>
        </value>
        <value>
          <fullName>BL</fullName>
          <label>Blog</label>
        </value>
        <value>
          <fullName>EM</fullName>
          <label>Email (exkl. Newsletter!)</label>
        </value>
        <value>
          <fullName>EL</fullName>
          <label>External Link</label>
        </value>
        <value>
          <fullName>EV</fullName>
          <label>Event</label>
        </value>
        <value>
          <fullName>FB</fullName>
          <label>Facebook</label>
        </value>
        <value>
          <fullName>FA</fullName>
          <label>Fair</label>
        </value>
        <value>
          <fullName>FX</fullName>
          <label>Fax</label>
        </value>
        <value>
          <fullName>GA</fullName>
          <label>Google Adwords</label>
        </value>
        <value>
          <fullName>IG</fullName>
          <label>Instagram</label>
        </value>
        <value>
          <fullName>DM</fullName>
          <label>Letter / Direct Mailing</label>
        </value>
        <value>
          <fullName>LI</fullName>
          <label>LinkedIn</label>
        </value>
        <value>
          <fullName>LN</fullName>
          <label>Line</label>
        </value>
        <value>
          <fullName>NL</fullName>
          <label>Newsletter</label>
        </value>
        <value>
          <fullName>PH</fullName>
          <label>Phone (Outbound)</label>
        </value>
        <value>
          <fullName>PI</fullName>
          <label>Pinterest</label>
        </value>
        <value>
          <fullName>PT</fullName>
          <label>Print</label>
        </value>
        <value>
          <fullName>PR</fullName>
          <label>Press Release</label>
        </value>
        <value>
          <fullName>PS</fullName>
          <label>Personal Selling</label>
        </value>
        <value>
          <fullName>RA</fullName>
          <label>Radio</label>
        </value>
        <value>
          <fullName>SH</fullName>
          <label>Online Shop</label>
        </value>
        <value>
          <fullName>OH</fullName>
          <label>Out of Home</label>
        </value>
        <value>
          <fullName>TW</fullName>
          <label>Twitter</label>
        </value>
        <value>
          <fullName>TV</fullName>
        </value>
        <value>
          <fullName>WS</fullName>
          <label>Website (dentsplysirona.com)</label>
        </value>
        <value>
          <fullName>WC</fullName>
          <label>WeChat</label>
        </value>
        <value>
          <fullName>WB</fullName>
          <label>Weibo</label>
        </value>
        <value>
          <fullName>WA</fullName>
          <label>WhatsApp</label>
        </value>
        <value>
          <fullName>XI</fullName>
          <label>Xing</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>NPIPractitionerID__c</fullName>
    <label>NPI/Practitioner ID?</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Other_Implant_system_experience__c</fullName>
    <label>Other Implant system experience</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Other_Information__c</fullName>
    <description>To capture any other relevant information</description>
    <inlineHelpText>Enter any other relevant feedback from the customer</inlineHelpText>
    <label>Other Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Other_interest__c</fullName>
    <label>Other interest</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Other_profession__c</fullName>
    <label>Other profession</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Owner_Territory__c</fullName>
    <formula>TEXT(Owner:User.Territory__c)</formula>
    <inlineHelpText>Based on Owner profile</inlineHelpText>
    <label>Owner Territory</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Perf_both_prosthetic_and_surgical_proc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perf. both prosthetic and surgical proc.</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Please_contact_me_by__c</fullName>
    <description>How the Lead would like to contacted in future.  Maps to Contact Preferences (U-End) field when converting lead</description>
    <inlineHelpText>How the Lead would like to contacted in future.  Maps to Contact Preferences (U-End) field when converting lead</inlineHelpText>
    <label>Preferred Communication Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Personal Visit</fullName>
        </value>
        <value>
          <fullName>Email</fullName>
        </value>
        <value>
          <fullName>Phone</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Postal_Code_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code Info</label>
    <referenceTo>Postal_Codes__c</referenceTo>
    <relationshipLabel>Leads in Postal Code</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Privacy__c</fullName>
    <description>Select Yes if the Lead has given his/her consent to Astra Tech storing information about him/her.</description>
    <label>Privacy (IT)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Area__c</fullName>
    <description>Product Area - Dependent on Country</description>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental</fullName>
          <default>true</default>
          <label>Dental</label>
        </value>
        <value>
          <fullName>Urology</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Interest__c</fullName>
    <description>Identifies what product(s) the customer is interested in</description>
    <inlineHelpText>Choose the product the customer is interested in</inlineHelpText>
    <label>Interested in the following Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Others</fullName>
        </value>
        <value>
          <fullName>DENTSPLY Implants</fullName>
        </value>
        <value>
          <fullName>ASTRA TECH Implant System</fullName>
        </value>
        <value>
          <fullName>ANKYLOS</fullName>
        </value>
        <value>
          <fullName>XiVE</fullName>
        </value>
        <value>
          <fullName>ATLANTIS</fullName>
        </value>
        <value>
          <fullName>SIMPLANT</fullName>
        </value>
        <value>
          <fullName>SYMBIOS</fullName>
        </value>
        <value>
          <fullName>STEPPS</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_procedures_ATIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Products &amp; procedures, ATIS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Profession__c</fullName>
    <description>Profession of Lead - Dependent upon Product Area</description>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Dental Assistant</fullName>
        </value>
        <value>
          <fullName>Dental Hygienist</fullName>
        </value>
        <value>
          <fullName>Dental Student</fullName>
        </value>
        <value>
          <fullName>Dental Technician</fullName>
        </value>
        <value>
          <fullName>Denturist</fullName>
        </value>
        <value>
          <fullName>Endodontist</fullName>
        </value>
        <value>
          <fullName>Faculty/Instructor/Professor</fullName>
        </value>
        <value>
          <fullName>General Dentist</fullName>
        </value>
        <value>
          <fullName>General Manager</fullName>
        </value>
        <value>
          <fullName>Implant Manager</fullName>
        </value>
        <value>
          <fullName>Implantologist</fullName>
        </value>
        <value>
          <fullName>Lab Owner</fullName>
        </value>
        <value>
          <fullName>Maxillofacial Surgeon</fullName>
        </value>
        <value>
          <fullName>Oral surgeon</fullName>
        </value>
        <value>
          <fullName>Orthodonist</fullName>
        </value>
        <value>
          <fullName>Other staff Dental</fullName>
        </value>
        <value>
          <fullName>Owner</fullName>
        </value>
        <value>
          <fullName>Periodontist</fullName>
        </value>
        <value>
          <fullName>Post Graduate trainee</fullName>
        </value>
        <value>
          <fullName>Prosthodontist</fullName>
        </value>
        <value>
          <fullName>Purchaser</fullName>
        </value>
        <value>
          <fullName>Registrar</fullName>
        </value>
        <value>
          <fullName>Restorative Dentist</fullName>
        </value>
        <value>
          <fullName>Sales Manager</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Question_2_marginal_bone_maintenance__c</fullName>
    <label>Question 2: marginal bone maintenance?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>A. 0.24 mm, 0.75 mm, 0.48 mm</fullName>
        </value>
        <value>
          <fullName>B. 0.34 mm, 0.85 mm, 0.58 mm</fullName>
        </value>
        <value>
          <fullName>C. 0.44 mm, 0.95 mm, 0.68 mm</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Question_3_combination_key_features__c</fullName>
    <label>Question 3: combination key features?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>A. Astra Tech BioManagement Complex</fullName>
        </value>
        <value>
          <fullName>B. Astra Tech Implant System</fullName>
        </value>
        <value>
          <fullName>C. Integrated Esthetics</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Question_4_new_study_OsseoSpeed__c</fullName>
    <label>Question 4: new study OsseoSpeed?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>A. Two-year follow-up</fullName>
        </value>
        <value>
          <fullName>B. Three-year follow-up</fullName>
        </value>
        <value>
          <fullName>C. Five-year follow-up</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Question_5_Atlantis_designed_for__c</fullName>
    <label>Question 5: Atlantis designed for?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>A. All major implant systems</fullName>
        </value>
        <value>
          <fullName>B. ATIS only</fullName>
        </value>
        <value>
          <fullName>C. Implants from Straumann only</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Question_6_Atlantis_available_in__c</fullName>
    <label>Question 6: Atlantis available in?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>A. Titanium only</fullName>
        </value>
        <value>
          <fullName>B. Zirconia only</fullName>
        </value>
        <value>
          <fullName>C. Titanium, gold-shaded titanium, zirconia</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Question_7_Atlantis_abutments_designed__c</fullName>
    <label>Question 7: Atlantis abutments designed?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>A. From the final tooth shape</fullName>
        </value>
        <value>
          <fullName>B. From a scanned wax abutment</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Region__c</fullName>
    <description>Dependent on Product Area</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Country_Lead__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Florida</fullName>
        </value>
        <value>
          <fullName>Great Lakes</fullName>
        </value>
        <value>
          <fullName>Indiana Region</fullName>
        </value>
        <value>
          <fullName>MidAtlantic</fullName>
        </value>
        <value>
          <fullName>MidWest</fullName>
        </value>
        <value>
          <fullName>New England</fullName>
        </value>
        <value>
          <fullName>New York</fullName>
        </value>
        <value>
          <fullName>NorthWest</fullName>
        </value>
        <value>
          <fullName>Rocky Mountains</fullName>
        </value>
        <value>
          <fullName>SouthEast</fullName>
        </value>
        <value>
          <fullName>Southern California</fullName>
        </value>
        <value>
          <fullName>Southern Region</fullName>
        </value>
        <value>
          <fullName>Texas</fullName>
        </value>
        <value>
          <fullName>Celtic</fullName>
        </value>
        <value>
          <fullName>East</fullName>
        </value>
        <value>
          <fullName>West</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>RoleProfession__c</fullName>
    <label>Role/Profession</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>RoleProfession</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Specialty</valueSetName>
    </valueSet>
  </fields>
</CustomObject>